fix alignment for apps_menu dropdown

--- a/cartoview/theme/static/theme/css/base.css
+++ b/cartoview/theme/static/theme/css/base.css
@@ -146,6 +146,7 @@ li.open .apps-icons {
     text-align: center;
     border-radius: 0.25rem;
     width: 350px;
+    margin-top: 5px;
 }
 
 .apps-icons li {
